--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,3 +24,19 @@
 
 /* Demo Page styles */
 @import 'demo';
+
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+	
+header > h1 {
+	font-family: "Ephesis", sans-serif;
+	font-size: 54px;
+}
+
+h3 {
+	font-family: "Ephesis", sans-serif;
+}
+
+main > p > img {
+	padding: 10px;
+	margin: 0 auto;
+}
