--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -43,6 +43,9 @@ navbar > p {
 
 navbar > p > a {
 	padding: 0 10px 0 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #80411e;
 }
 
 navbar > p > a:hover {
