feat: changed font-family and text-shadow

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Petemoss&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Petemoss&family=Estonia&display=swap');
 
 html {
 	background-image: url("components/images/brick-wallpaper.png");
@@ -7,7 +7,7 @@ html {
 body {
 
   margin: 0 auto;
-  font-family: 'Petemoss', cursive, sans-serif;
+  font-family: 'Petemoss', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
