--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,71 @@
 	text-align: center;
 	margin: 10px auto;
 }
+.logo {
+	text-align: center;
+}
+
+.logo a, a:hover, a:visited {
+	text-decoration: none;
+}
+
+@keyframes animCoffeeTitle {
+	0% { opacity: 0; transform: translateY(-200px); }
+	50% { opacity: 0.5; transform: translateY(0px); }
+	100% { opacity: 1; }
+}
+
+@keyframes animCoffeeLogo {
+	0% { opacity: 0; transform: translateY(-200px); }
+	100% { opacity: 1; transofrm: translateY(0px); }
+}
+
+.logoTitle h1 {
+
+	animation-name: animCoffeeTitle;
+	animation-duration: 0.7s;
+	animation-fill-mode: forwards;
+	
+	text-shadow: 0px 0px 10px maroon;
+	
+	text-align: center;
+	font-family: 'Petemoss', cursive;
+	font-size: 64px;
+	letter-spacing: 10px;
+	word-spacing: 80px;
+	
+	margin: 30px auto;
+	padding: 10px 0px;
+	width: 55%;
+	
+	background-color: bisque;
+	color: chocolate;
+
+	transition-property: letter-spacing, word-spacing;
+	transition-duration: 1s;
+}
+
+.logoTitle h1:hover {
+		letter-spacing: 5px;
+		word-spacing: 40px;
+		cursor: pointer;
+}
+
+#coffeeLogo img {
+	opacity: 0;
+	animation-name: animCoffeeLogo;
+	animation-duration: 0.9s;
+	animation-delay: 0.5s;
+	animation-fill-mode: forwards;
+	
+	filter: drop-shadow(0px 0px 18px bisque);
+	
+	transition-property: filter, width, height;
+	transition-duration: 0.5s;
+	transition-timing-function: ease-in;
+}
+
+#coffeeLogo img:hover {
+	filter: drop-shadow(0px 0px 9px bisque);
+	cursor: pointer;
+}
