--- a/src/css/container.css
+++ b/src/css/container.css
@@ -20,6 +20,10 @@
 	filter: drop-shadow(0px 0px 12px chocolate);
 }
 
+#espressoCoffeeGIF {
+	transform: scale(0.7, 0.7);
+}
+
 .categories {
 	position: relative;
 	right: -100%;
