--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Petemoss&family=Estonia&display=swap');
 
 html {
-	background-image: url("components/images/brick-wallpaper.png");
+	background-image: url("components/images/brick-wallpaper.webp");
 }
 
 body {
